--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: wangyoucao577/go-release-action@v1.11
+    - uses: wangyoucao577/go-release-action
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
