--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,28 +3,13 @@ on:
     types: [created]
 
 jobs:
-  xgo:
-    strategy:
-      fail-fast: false
-      matrix:
-        go_version:
-          - 1.14.x
+  build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Build with xgo
-        uses: crazy-max/ghaction-xgo@v1
+      - name: Checkout
+        uses: actions/checkout@master
+
+      - name: Make binaries
+        uses: sosedoff/actions/golang-build@master
         with:
-          xgo_version: latest
-          go_version: ${{ matrix.go_version }}
-          dest: build
-          prefix: myapp
-          targets: windows/amd64,linux/amd64,darwin/amd64
-          v: true
-          x: false
-          race: false
-          ldflags: -s -w
-          buildmode: default
+          args: linux/amd64 darwin/amd64
